--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-DATABASE_URI=mongodb://127.0.0.1/your-database-name
+DATABASE_URI=postgres://payload_user:password@127.0.0.1:5432/asset_manager
+POSTGRES_DB=asset_manager
+POSTGRES_USER=payload_user
+POSTGRES_PASSWORD=password
 PAYLOAD_SECRET=YOUR_SECRET_HERE
