--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,33 @@
-version: '3'
-
 services:
   payload:
-    image: node:18-alpine
+    container_name: asset_manager_dev_payload
+    image: node:22.14.0-alpine
     ports:
-      - '3000:3000'
+      - "3000:3000"
+    env_file:
+      - .env
+    user: "1000:1000"
     volumes:
       - .:/home/node/app
       - node_modules:/home/node/app/node_modules
     working_dir: /home/node/app/
     command: sh -c "corepack enable && corepack prepare pnpm@latest --activate && pnpm install && pnpm dev"
     depends_on:
-      - mongo
-      # - postgres
-    env_file:
-      - .env
+      - postgres
 
-  # Ensure your DATABASE_URI uses 'mongo' as the hostname ie. mongodb://mongo/my-db-name
-  mongo:
-    image: mongo:latest
+  postgres:
+    container_name: asset_manager_dev_db
+    image: postgres:17-alpine
     ports:
-      - '27017:27017'
-    command:
-      - --storageEngine=wiredTiger
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
-      - data:/data/db
-    logging:
-      driver: none
-
-  # Uncomment the following to use postgres
-  # postgres:
-  #   restart: always
-  #   image: postgres:latest
-  #   volumes:
-  #     - pgdata:/var/lib/postgresql/data
-  #   ports:
-  #     - "5432:5432"
+      - pgdata:/var/lib/postgresql/data
+    restart: always
 
 volumes:
-  data:
-  # pgdata:
+  pgdata:
   node_modules:
