--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,19 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all",
   "printWidth": 100,
-  "semi": false
+  "tabWidth": 2,
+  "singleQuote": false,
+  "bracketSameLine": true,
+  "singleAttributePerLine": true,
+  "trailingComma": "es5",
+  "importOrder": [
+    "^(react|react-native|expo(-[a-zA-Z-]*)?)$",
+    "<THIRD_PARTY_MODULES>",
+    "^@/(?!components)(.*)$",
+    "^@/components/(.*)$",
+    "^[./]"
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "tailwindAttributes": ["className"],
+  "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"]
 }
